# simplex-tui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  DONATION-POLICY.md  GOVERNANCE.md  LEGAL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SPONSORS.md  SUPPORT.md  TRADEMARK.md  debug.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
package/: simplex-tui_0.1.3_arm64.deb
package/simplex-tui_0.1.3_arm64/DEBIAN/: control
src/: app.rs  colors.rs  handlers.rs  main.rs  types.rs  websocket.rs
src/ui/: chat.rs  contacts.rs  input.rs  layout.rs  mod.rs  modals.rs  status.rs
