[package]
name = "simplex-tui"
version = "0.1.2-alpha"
edition = "2021"
authors = ["cannatoshi"]
description = "Secure terminal messenger for SimpleX Chat"
license = "AGPL-3.0"
repository = "https://github.com/cannatoshi/simplex-tui"
keywords = ["simplex", "chat", "tui", "terminal", "messenger"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
ratatui-explorer = "0.2"
crossterm = "0.28"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

